[package]
name = "crank"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = {version = "0.8.6",  features = [
    "runtime-tokio-rustls",    "postgres",
    "macros",
    "chrono",
    "rust_decimal"]}
tokio = { version = "1.48.0", features = ["full"] }
